# KVData

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/kv_data/: kv_data.h  kv_pair.h  kv_parser.h  kv_token.h
src/: CMakeLists.txt  kv_data.cpp  kv_parser.cpp
test/: CMakeLists.txt  main.cpp  test_keyval.cpp
